[package]
name = "libjerasure"
version = "0.1.0"
authors = ["Henrik Knudsen <henrik@knudsenhome.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
thiserror = "1.0"



[dev-dependencies]

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"