[package]
name = "libjerasure"
version = "0.1.0"
authors = ["Henrik Knudsen <henrik@knudsenhome.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
thiserror = "1.0"
lazy_static = "1.4"



[dev-dependencies]

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
criterion = {version = "0.3", features = ["html_reports"]}




[[bench]]
name = "spread"
path = "benches/spread.rs"
harness = false